[package]
name = "matrix-testing"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10.0"
error-iter = "0.4.1"
log = "0.4.20"
pixels = "0.13.0"
rand = "0.8.5"
winit = "0.28.6"
winit_input_helper = "0.14.1"
